--- a/style.css
+++ b/style.css
@@ -64,8 +64,44 @@ nav ul li a:hover {
   display: flex;
   justify-content: center;
   animation: animate 6s ease infinite;
-  /* box-shadow: 1px 0px 5px 2px #1e1e1e96; */
+
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #1e1e1e;
+  color: #fff;
+}
+
+.navbar .logo img {
+  width: 200px;
+}
+
+.navbar .menu-icon {
+  display: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.navbar ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.navbar ul li {
+  margin: 0 15px;
+}
+
+.navbar ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: large;
+  font-weight: bold;
+}
+
 
 
 
@@ -316,12 +352,18 @@ nav ul li a:hover {
   font-size: 1.5em;
 }
 
+.exp-sub-details li:before {
+  content: none;
+}
+
 .exp-title {
   font-weight: bold;
   color: #0073e6;
   display: block;
   margin-bottom: 5px;
 }
+
+
 
 .exp-details {
   padding: 20px;
@@ -345,15 +387,122 @@ nav ul li a:hover {
   color: #0073e6;
 }
 
+
+/* Skills Section */
+
+#skills {
+  padding: 50px 20px;
+  background-color: #f0f4f8;
+  text-align: center;
+}
+
+#skills h2 {
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.skill-card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 20px;
+  width: 25%;
+  transition: transform 0.3s, box-shadow 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.skill-card img {
+  max-width: 80%;
+  margin-bottom: 15px;
+}
+
+.skill-card h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.skill-card ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 2px;
+}
+
+.skill-card li {
+  width: 100%;
+  font-size: 1em;
+  color: #666;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px;
+}
+
+.skill-card span {
+  padding: 0px;
+  margin: 0px;
+}
+
+.proficiency {
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 2px 5px;
+  width: 50%;
+}
+
+.proficient {
+  color: #fff;
+  background-color: #6c757d;
+}
+
+.advanced {
+  color: #fff;
+  background-color: #007bff;
+}
+
+.expert {
+  color: #fff;
+  background-color: #28a745;
+}
+
+.skill-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+
 #blog {
   background-color: #fff;
   padding: 40px 20px;
 }
 
+#blog h2 {
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #333;
+}
+
 .blog-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 20px;
+
 }
 
 .blog-post {
@@ -361,6 +510,25 @@ nav ul li a:hover {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.imgCont {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+
+}
+
+.blog-post .imgCont img {
+  min-height: 300px;
+  max-width: 300px;
+  max-height: 300px;
+  border-radius: 5px;
 }
 
 .blog-post h3 {
@@ -385,6 +553,7 @@ nav ul li a:hover {
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  text-align: center;
 }
 
 .read-more-link:hover {
@@ -451,4 +620,530 @@ footer .social-media a {
 
 footer .social-media a:hover {
   color: #f39c12;
+}
+
+
+@media screen and (max-width: 768px) {
+  .navbar .menu-icon {
+    display: block;
+  }
+
+  .navbar ul {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar ul li {
+    margin: 10px 0;
+  }
+
+  .navbar.active ul {
+    display: flex;
+  }
+}
+
+@media (max-width: 720px) {
+  body {
+    margin: 0;
+    font-family: 'Poppins', Arial, sans-serif;
+    background-color: whitesmoke;
+    color: black;
+    margin: 0px 10px;
+    overflow-x: hidden;
+  }
+
+  header {
+    border-bottom: 1px solid black;
+    text-align: center;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  nav .logo img {
+    width: 150px;
+  }
+
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 10px 0;
+  }
+
+  nav ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: medium;
+    font-weight: bold;
+  }
+
+  .intro {
+    text-align: center;
+    padding: 30px 10px;
+  }
+
+  .carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2% 5%;
+    background-color: rgba(229, 229, 229, 0.909);
+  }
+
+  .slide {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    animation: animate 6s ease infinite;
+  }
+
+  .carousel div>img {
+    width: 100%;
+  }
+
+  #about {
+    margin-top: 10%;
+    border-top: 5px solid olive;
+    border-bottom: 5px solid olive;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #about>p {
+    width: 100%;
+    line-height: 30px;
+  }
+
+  #projects {
+    background: #f0f4f8;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  #projects h2 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .project-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .project-card {
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    width: calc(100% - 20px);
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .imgcont {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .project-card h3 {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 1.5em;
+    color: white;
+  }
+
+  .project-card p {
+    padding: 0 20px;
+    font-size: 1em;
+    text-align: justify;
+  }
+
+  .project-details {
+    padding: 20px;
+    color: #333;
+  }
+
+  .project-details ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .project-details li {
+    margin-bottom: 10px;
+    font-size: 1em;
+    position: relative;
+    padding-left: 20px;
+  }
+
+  .project-details li:before {
+    content: '•';
+    position: absolute;
+    left: 0;
+    color: #0073e6;
+    font-size: 1.5em;
+  }
+
+  .learn-more-button,
+  .learn-more-link {
+    display: inline-block;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #007bff;
+    font-weight: bold;
+    font-size: 14px;
+    transition: color 0.3s ease;
+  }
+
+  .learn-more-button:hover,
+  .learn-more-link:hover {
+    color: #0056b3;
+    cursor: pointer;
+  }
+
+  #experience {
+    background: #f5f5f5;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  #experience h2 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .experience-container {
+    justify-content: center;
+    gap: 20px;
+    border-bottom: 5px solid olive;
+  }
+
+  .experience-card {
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    width: calc(100% - 20px);
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .exp-info {
+    width: 100%;
+    background: rgba(128, 128, 0, 0.868);
+    color: #fff;
+    padding: 20px;
+    min-height: 100px;
+    text-align: center;
+  }
+
+  .exp-info h3 {
+    margin: 0 0 10px;
+    font-size: 1.5em;
+  }
+
+  .exp-info p {
+    margin: 0;
+    font-size: 1em;
+  }
+
+  .exp-summary {
+    padding: 20px;
+    color: #333;
+  }
+
+  .exp-summary ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .exp-summary li {
+    margin-bottom: 10px;
+    font-size: 1em;
+    position: relative;
+    padding-left: 20px;
+  }
+
+  .exp-summary li:before {
+    content: '•';
+    position: absolute;
+    left: 0;
+    color: #0073e6;
+    font-size: 1.5em;
+  }
+
+  .exp-sub-details li:before {
+    content: none;
+  }
+
+  .exp-title {
+    font-weight: bold;
+    color: #0073e6;
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  .exp-details {
+    padding: 20px;
+    color: #000000;
+  }
+
+  .exp-duration {
+    margin-top: 20px;
+  }
+
+  .exp-duration span {
+    font-weight: bold;
+    color: #000000b6;
+    font-size: 0.9em;
+    text-transform: uppercase;
+  }
+
+  .exp-duration h3 {
+    margin: 5px 0 0;
+    font-size: 1.2em;
+    color: #0073e6;
+  }
+
+  /* Skills Section */
+
+  #skills {
+    padding: 30px 20px;
+    background-color: #f0f4f8;
+    text-align: center;
+  }
+
+  #skills h2 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .skill-card {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    padding: 20px;
+    width: 70%;
+    transition: transform 0.3s, box-shadow 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .skill-card img {
+    max-width: 60%;
+    margin-bottom: 15px;
+  }
+
+  .skill-card h3 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+  }
+
+  .skill-card ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 2px;
+  }
+
+  .skill-card li {
+    width: 100%;
+    font-size: 0.9em;
+    color: #666;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px;
+  }
+
+  .skill-card span {
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .proficiency {
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 2px 5px;
+    width: 50%;
+  }
+
+  .proficient {
+    color: #fff;
+    background-color: #6c757d;
+  }
+
+  .advanced {
+    color: #fff;
+    background-color: #007bff;
+  }
+
+  .expert {
+    color: #fff;
+    background-color: #28a745;
+  }
+
+  .skill-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+
+  #blog {
+    background-color: #fff;
+    padding: 20px;
+  }
+
+  #blog h2 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .blog-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+  }
+
+  .blog-post {
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .imgCont {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .blog-post .imgCont img {
+    min-height: 200px;
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 5px;
+  }
+
+  .blog-post h3 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+  }
+
+  .post-date {
+    color: #666;
+    margin-bottom: 10px;
+  }
+
+  .blog-post p {
+    margin-bottom: 15px;
+  }
+
+  .read-more-link {
+    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    padding: 8px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    text-align: center;
+  }
+
+  .read-more-link:hover {
+    background-color: #0056b3;
+  }
+
+  #contact {
+    background-color: #f0f0f0;
+    padding: 20px;
+  }
+
+  .contact-form {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  .contact-form form {
+    display: grid;
+    gap: 20px;
+  }
+
+  .contact-form label {
+    font-weight: bold;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+
+  .contact-form textarea {
+    resize: vertical;
+  }
+
+  .contact-form button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .contact-form button:hover {
+    background-color: #0056b3;
+  }
 }
