--- a/style.css
+++ b/style.css
@@ -56,14 +56,18 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   padding: 2% 5%;
-  background-color: rgba(229, 229, 229, 0.909);
+  background-color: rgba(12, 12, 12, 0.932);
 }
 
 .slide {
+  border-radius: 3px;
+  background-color: white;
+  box-shadow: 2px 1px 10px 2px #ffffff4c;
   width: 40%;
   display: flex;
   justify-content: center;
   animation: animate 6s ease infinite;
+
 
 }
 
@@ -560,49 +564,61 @@ nav ul li a:hover {
   background-color: #0056b3;
 }
 
+/* Contact Section */
 #contact {
-  background-color: #f0f0f0;
-  padding: 40px 20px;
+  padding: 50px 20px;
+  background-color: #f0f4f8;
+  text-align: center;
 }
 
-.contact-form {
-  max-width: 600px;
+#contact h2 {
+  font-size: 2.5em;
+  margin-bottom: 30px;
+}
+
+.contact-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  /* max-width: 800px; */
   margin: 0 auto;
 }
 
-.contact-form form {
-  display: grid;
-  gap: 20px;
+.contact-card {
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 20px;
+  width: 280px;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.contact-form label {
-  font-weight: bold;
+.contact-card img {
+  max-width: 50px;
+  margin-bottom: 15px;
 }
 
-.contact-form input,
-.contact-form textarea {
-  width: 100%;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
+.contact-card h3 {
+  font-size: 1.2em;
+  margin-bottom: 10px;
 }
 
-.contact-form textarea {
-  resize: vertical;
+.contact-card p {
+  font-size: 1em;
+  color: #666;
+  margin: 10px 0;
 }
 
-.contact-form button {
-  background-color: #007bff;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.contact-card a {
+  text-decoration: none;
+  color: #007bff;
 }
 
-.contact-form button:hover {
-  background-color: #0056b3;
+.contact-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 footer {
